Styling and javascript fixes

--- a/Prototype/Views/Home/_Partials/MyGroups.cshtml
+++ b/Prototype/Views/Home/_Partials/MyGroups.cshtml
@@ -9,6 +9,12 @@
     <!-- Mid Level Tools -->
     <div id="toolbar">
 
+        <!-- Search -->
+        <div class="input-group mb-3">
+            <span class="input-group-text"><i class='bx bx-search'></i></span>
+            <input type="text" class="form-control" aria-label="Search Groups">
+        </div>
+
         <!-- Example single danger button -->
         <div class="dropdown">
             <button onclick="toggleDropdown('groupsFilters')" class="btn btn-cosgear">
