--- a/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
@@ -120,7 +120,7 @@
                                 </ul>
                             </div>
                             <div>
-                                <a class="post-ghost show-more" href="#">Show more</a>
+                                <a class="post-ghost show-more" href="#" onclick="showMoreContent(this)">Show more</a>
                             </div>
                         </div>
 
@@ -169,7 +169,7 @@
                                 </ul>
                             </div>
                             <div>
-                                <a class="post-ghost show-more" href="#">Show more</a>
+                                <a class="post-ghost show-more" href="#" onclick="showMoreContent(this)">Show more</a>
                             </div>
                         </div>
 
@@ -244,7 +244,7 @@
                             </ul>
                         </div>
                         <div>
-                            <a class="post-ghost show-more" href="#">Show more</a>
+                                <a class="post-ghost show-more" onclick="showMoreContent(this)" href="#">Show more</a>
                         </div>
                     </div>
 
@@ -268,6 +268,8 @@
     </div>
 </section>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="js/groups.js"></script>
 <script src="js/scrollToTop.js"></script>
 <script src="js/postSlideshow.js"></script>
