Adding fun details and stuff

--- a/Prototype/Views/Home/Index.cshtml
+++ b/Prototype/Views/Home/Index.cshtml
@@ -55,6 +55,11 @@
 
     <!-- Discover Groups Container -->
     <div id="discover" class="tabcontent hide">
+        <partial>
+            @{
+                await Html.RenderPartialAsync("_Partials/Discover");
+            }
+        </partial>
     </div>
 
     <script src="js/groups.js"></script>
