--- a/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
@@ -4,6 +4,9 @@
 @{
     int groupNumber = 8;
 }
+<head>
+    <link rel="stylesheet" href="css/groupFeed.css" />
+</head>
 <section class="text-center container scroll-container" onscroll="scrollFunction('postContainer')" id="postContainer">
 
     <!-- Mid Level Tools -->
@@ -244,7 +247,7 @@
                             </ul>
                         </div>
                         <div>
-                                <a class="post-ghost show-more" onclick="showMoreContent(this)" href="#">Show more</a>
+                            <a class="post-ghost show-more" onclick="showMoreContent(this)" href="#">Show more</a>
                         </div>
                     </div>
 
