--- a/Prototype/Views/Home/_Partials/MyGroups.cshtml
+++ b/Prototype/Views/Home/_Partials/MyGroups.cshtml
@@ -3,14 +3,18 @@
 *@
 @{
     int groupNumber = 8;
+    Random rnd = new Random();
 }
+<head>
+    <link rel="stylesheet" href="css/myGroups.css" />
+</head>
 <section class="container scroll-container" onscroll="scrollFunction('groupsContainer')" id="groupsContainer">
 
     <!-- Mid Level Tools -->
     <div id="toolbar">
 
         <!-- Search -->
-        <div class="input-group mb-3">
+        <div class="input-group mb-3" id="groupSearch">
             <span class="input-group-text"><i class='bx bx-search'></i></span>
             <input type="text" class="form-control" aria-label="Search Groups">
         </div>
@@ -69,10 +73,30 @@
         {
             <div class="card">
                 <div class="card-body d-inline-flex">
-                    <img src="imgs/myGroups/group1.jpeg" alt="...">
+                    <div class="img-container">
+                        <img src="imgs/myGroups/group1.jpeg" alt="...">
+                    </div>
                     <div class="d-inline">
                         <h3>Group @i</h3>
+                        <div class="group-stats">
+                            <i class='bx bx-user-circle'></i>
+                            @rnd.Next(1, 50)
+
+                            <i class='bx bx-lock-open-alt'></i>
+                            Public
+                        </div>
                         This is some text within a card body.
+
+                        <div class="group-activity">
+                            <div class="notification">
+                                <i class='bx bx-conversation'></i>
+                                <span class="button__badge"></span>
+                            </div>
+                            <div class="notification">
+                                <i class='bx bx-images'></i>
+                                <span class="button__badge"></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
