Adding group views

--- a/Prototype/Views/Home/Index.cshtml
+++ b/Prototype/Views/Home/Index.cshtml
@@ -43,6 +43,7 @@
             }
         </partial>
     </section>
+
     <!-- Scroll to Top Button -->
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class='bx bxs-chevron-up'></i></button>
 
@@ -73,5 +74,5 @@
         </partial>
     </div>
 
-    <script src="js/groups.js"></script>
+    <script src="../js/groups.js"></script>
 </body>
