--- a/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
@@ -6,7 +6,8 @@
     Random rnd = new Random();
 }
 <head>
-    <link rel="stylesheet" href="css/myGroups.css" />
+    <link rel="stylesheet" href="../css/groups.css" />
+    <link rel="stylesheet" href="../css/myGroups.css" />
 </head>
 <section class="container scroll-container" onscroll="scrollFunction('groupsContainer')" id="groupsContainer">
 
@@ -71,39 +72,39 @@
     <div>
         @for (int i = 0; i < groupNumber; i++)
         {
-            <a href="@Url.Action("GroupView", "Home")" class="text-decoration-none">
-                <div class="card">
-                    <div class="card-body d-inline-flex">
-                        <div class="img-container">
-                            <img src="imgs/myGroups/group1.jpeg" alt="...">
-                        </div>
-                        <div class="d-inline">
-                            <h3>Group @i</h3>
-                            <div class="group-stats">
-                                <i class='bx bx-user-circle'></i>
-                                @rnd.Next(1, 50)
+            int cosProg = rnd.Next(0, 100);
 
-                                <i class='bx bx-lock-open-alt'></i>
-                                Public
+            <div class="card">
+                <div class="card-body d-inline-flex">
+                    <div class="img-container">
+                        <img src="../imgs/groupCosplays/fran.jpg" alt="...">
+                    </div>
+                    <div class="d-inline">
+                        <h3>Character Name</h3>
+                        <small> by @@Username-@i</small>
+
+                        <!-- Cosplay Progress Bar-->
+                        <div class="cosplay-stats">
+                            <p>@cosProg%</p>
+                            <div class="progress" role="progressbar" aria-label="Cosplay Progress" aria-valuenow="@cosProg" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar" style="width: @cosProg%">
+                                </div>
                             </div>
-                            This is some text within a card body.
+                        </div>
 
-                            <div class="group-activity">
-                                <div class="notification">
-                                    <i class='bx bx-conversation'></i>
-                                    <span class="button__badge"></span>
-                                </div>
-                                <div class="notification">
-                                    <i class='bx bx-images'></i>
-                                    <span class="button__badge"></span>
-                                </div>
+                        <div class="group-activity">
+                            <div class="notification">
+                                <i class='bx bxs-hot'></i>
+                                <span>@rnd.Next(50, 150)</span>
                             </div>
                         </div>
                     </div>
                 </div>
-            </a>
+            </div>
         }
 
     </div>
 
 </section>
+
+<script src="../js/groups.js"></script>
