--- a/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
@@ -5,7 +5,7 @@
     int groupNumber = 8;
 }
 <head>
-    <link rel="stylesheet" href="css/groupFeed.css" />
+    <link rel="stylesheet" href="../css/groupFeed.css" />
 </head>
 <section class="text-center container scroll-container" onscroll="scrollFunction('postContainer')" id="postContainer">
 
@@ -100,7 +100,7 @@
                     <div class="post-card ">
                         <em class="post-ghost post-time">1d ago</em>
                         <div class="d-inline">
-                            <img src="imgs/avatar.png" alt="Avatar" class="avatar d-inline-block">
+                            <img src="../imgs/avatar.png" alt="Avatar" class="avatar d-inline-block">
                             <div class="post-header d-inline-block">
                                 <em><b>@@username</b> need helps with...</em>
                                 <p>This Totally Awesome Cosplay</p>
@@ -148,7 +148,7 @@
                     <div class="post-card">
                         <em class="post-ghost post-time">1d ago</em>
                         <div class="d-inline">
-                            <img src="imgs/avatar.png" alt="Avatar" class="avatar d-inline-block">
+                            <img src="../imgs/avatar.png" alt="Avatar" class="avatar d-inline-block">
                             <div class="post-header d-inline-block">
                                 <em><b>@@username</b> need helps with...</em>
                                 <p>This Totally Awesome Cosplay</p>
@@ -156,7 +156,7 @@
                         </div>
 
                         <div>
-                            <img src="imgs/posts/single-1.jpg" />
+                            <img src="../imgs/posts/single-1.jpg" />
                             <h5 class="card-title">Post With One Image</h5>
                             <div class="content hideContent">
                                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
@@ -198,7 +198,7 @@
                 <div class="post-card">
                     <em class="post-ghost post-time">1d ago</em>
                     <div class="d-inline">
-                        <img src="imgs/avatar.png" alt="Avatar" class="avatar d-inline-block">
+                        <img src="../imgs/avatar.png" alt="Avatar" class="avatar d-inline-block">
                         <div class="post-header d-inline-block">
                             <em><b>@@username</b> need helps with...</em>
                             <p>This Totally Awesome Cosplay</p>
@@ -210,19 +210,19 @@
                         <div class="slideshow-container">
 
                             <div class="postImage">
-                                <img src="imgs/posts/multi-3.jpg">
+                                <img src="../imgs/posts/multi-3.jpg">
                                 <div class="text">Caption Text for this image</div>
                                 <div class="numbertext">1 / 3</div>
                             </div>
 
                             <div class="postImage">
-                                <img src="imgs/posts/multi-1.jpg">
+                                <img src="../imgs/posts/multi-1.jpg">
                                 <div class="text">Captioning this image as well</div>
                                 <div class="numbertext">2 / 3</div>
                             </div>
 
                             <div class="postImage">
-                                <img src="imgs/posts/multi-2.jpg">
+                                <img src="../imgs/posts/multi-2.jpg">
                                 <div class="text">Yet another caption</div>
                                 <div class="numbertext">3 / 3</div>
                             </div>
@@ -273,6 +273,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<script src="js/groups.js"></script>
-<script src="js/scrollToTop.js"></script>
-<script src="js/postSlideshow.js"></script>
+<script src="../js/groups.js"></script>
+<script src="../js/scrollToTop.js"></script>
+<script src="../js/postSlideshow.js"></script>
