--- a/Prototype/Views/Home/Index.cshtml
+++ b/Prototype/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/groups.css" rel="stylesheet">
+    <link href="~/css/groups.css" rel="stylesheet">
 </head>
 <body>
     <!-- Top Header Area -->
@@ -45,7 +45,7 @@
     </section>
 
     <!-- Scroll to Top Button -->
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class='bx bxs-chevron-up'></i></button>
+    <button onclick="topFunction()" class="myBtn" title="Go to top"><i class='bx bxs-chevron-up'></i></button>
 
     <!-- Groups Feed Container -->
     <div id="feed" class="tabcontent hide">
@@ -73,6 +73,4 @@
             }
         </partial>
     </div>
-
-    <script src="../js/groups.js"></script>
 </body>
