--- a/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
@@ -2,14 +2,14 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    int groupNumber = 8;
+    int groupNumber = 12;
     Random rnd = new Random();
 }
 <head>
     <link rel="stylesheet" href="../css/groups.css" />
     <link rel="stylesheet" href="../css/myGroups.css" />
 </head>
-<section class="container scroll-container" onscroll="scrollFunction('groupsContainer')" id="groupsContainer">
+<section class="scroll-container" onscroll="scrollFunction('groupsContainer')" id="groupsContainer">
 
     <!-- Mid Level Tools -->
     <div id="toolbar">
