--- a/Prototype/Views/Home/_Partials/Discover.cshtml
+++ b/Prototype/Views/Home/_Partials/Discover.cshtml
@@ -8,7 +8,7 @@
 <head>
     <link rel="stylesheet" href="css/discover.css" />
 </head>
-<section class="container scroll-container" onscroll="scrollFunction('discoverContainer')" id="discoverContainer">
+<section class="scroll-container" onscroll="scrollFunction('discoverContainer')" id="discoverContainer">
 
     <!-- Mid Level Tools -->
     <div id="toolbar">
