--- a/Prototype/Views/Home/_Partials/MyGroups.cshtml
+++ b/Prototype/Views/Home/_Partials/MyGroups.cshtml
@@ -8,7 +8,7 @@
 <head>
     <link rel="stylesheet" href="css/myGroups.css" />
 </head>
-<section class="container scroll-container" onscroll="scrollFunction('groupsContainer')" id="groupsContainer">
+<section class="scroll-container" onscroll="scrollFunction('groupsContainer')" id="groupsContainer">
 
     <!-- Mid Level Tools -->
     <div id="toolbar">
@@ -68,40 +68,44 @@
     </div>
 
     <!-- Group Lists -->
-    <div>
+    <div class="container">
         @for (int i = 0; i < groupNumber; i++)
         {
-            <a href="@Url.Action("GroupView", "Home")" class="text-decoration-none">
-                <div class="card">
-                    <div class="card-body d-inline-flex">
-                        <div class="img-container">
+            <div class="card group-card">
+                <div class="card-body">
+                    <a href="@Url.Action("GroupView", "Home")">
                             <img src="imgs/myGroups/group1.jpeg" alt="...">
-                        </div>
-                        <div class="d-inline">
-                            <h3>Group @i</h3>
-                            <div class="group-stats">
-                                <i class='bx bx-user-circle'></i>
-                                @rnd.Next(1, 50)
+                    </a>
+                    <div class="p-4">
+                        <a href="@Url.Action("GroupView", "Home")">
+                            <div class="align-middle">
+                                <h2>Group @i</h2>
+                                <div class="group-stats">
+                                    <i class='bx bx-user-circle'></i>
+                                    @rnd.Next(1, 50)
 
-                                <i class='bx bx-lock-open-alt'></i>
-                                Public
+                                    <i class='bx bx-lock-open-alt'></i>
+                                    Public
+                                </div>
                             </div>
-                            This is some text within a card body.
-
-                            <div class="group-activity">
-                                <div class="notification">
-                                    <i class='bx bx-conversation'></i>
-                                    <span class="button__badge"></span>
-                                </div>
-                                <div class="notification">
-                                    <i class='bx bx-images'></i>
-                                    <span class="button__badge"></span>
-                                </div>
+                        </a>
+                        <div class="group-activity">
+                            <div class="notification">
+                                <i class='bx bx-conversation'></i>
+                                <span class="position-absolute top-0 start-50 translate-middle p-2 bg-danger rounded-circle">
+                                    <span class="visually-hidden">New alerts</span>
+                                </span>
+                            </div>
+                            <div class="notification">
+                                <i class='bx bx-images'></i>
+                                <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger rounded-circle">
+                                    <span class="visually-hidden">New alerts</span>
+                                </span>
                             </div>
                         </div>
                     </div>
                 </div>
-            </a>
+            </div>
         }
 
     </div>
