--- a/Prototype/wwwroot/css/myGroups.css
+++ b/Prototype/wwwroot/css/myGroups.css
@@ -17,14 +17,32 @@
         }
 
         #myGroups .card img, #cosplays .card img {
-            float: left;
-            min-height: 4vh;
-            max-height: 10vh !important;
-            width: auto;
             margin-left: auto;
-            margin-right: 0.5em;
-            border-radius: 8px;
         }
+
+@media (max-width: 750px) {
+    .img-container {
+        height: 100px;
+        width: 100px;
+        margin-right: 0.5em;
+    }
+}
+
+.img-container {
+    margin: auto;
+    float: left;
+    margin-right: 1em;
+    height: 120px;
+    width: 120px;
+}
+
+    .img-container img {
+        height: 100%;
+        width: 100%;
+        border-radius: 8px;
+        vertical-align: middle;
+        object-fit: fill;
+    }
 
 .card-body {
     padding: 0;
@@ -59,7 +77,7 @@
 
 .group-activity {
     position: absolute;
-    z-index: 10;
+    z-index: 3;
     right: 12px;
     top: 35%;
     float: right;
