--- a/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
@@ -12,11 +12,10 @@
     <!-- Mid Level Tools -->
     <div id="toolbar">
 
-        <!-- Example single danger button -->
+        <!-- Filter Dropdown -->
         <div class="dropdown">
             <button onclick="toggleDropdown('feedFilters')" class="btn btn-cosgear">
                 <i class='bx bx-filter-alt'></i>
-                <i class='bx bxs-down-arrow'></i>
             </button>
             <div id="feedFilters" class="dropdown-content">
 
@@ -269,6 +268,7 @@
 
         </div>
     </div>
+
 </section>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
