--- a/Prototype/wwwroot/css/groups.css
+++ b/Prototype/wwwroot/css/groups.css
@@ -3,7 +3,7 @@ body {
     color: var(--cosgear-5);
     font-size: 16px;
     padding: 8px;
-    scrollbar-width: none; 
+    scrollbar-width: none; ;
 }
 
 .header {
