--- a/Prototype/Views/Home/Index.cshtml
+++ b/Prototype/Views/Home/Index.cshtml
@@ -7,31 +7,49 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="~/css/groups.css" rel="stylesheet">
+    <script src="~/js/site.js"></script>
 </head>
 <body>
     <!-- Top Header Area -->
     <div class="header">
+
         <!-- Controls and Label -->
-        <div>
+        <div class="mb-0">
             <h1 class="d-inline"> <i class='bx bx-group'></i> Groups</h1>
 
             <!-- Button trigger modal -->
             <button type="button" class="action" data-bs-toggle="modal" data-bs-target="#createGroupModal">
                 <i class='bx bx-plus-circle'></i>
             </button>
+            <button type="button" class="action position-relative">
+                <i class='bx bx-bell'>
+                    <span class="position-absolute top-0 start-75 translate-middle p-1 bg-danger rounded-circle">
+                        <span class="visually-hidden">New alerts</span>
+                    </span>
+                </i>
 
+            </button>
         </div>
 
         <!-- Nagivation Bar -->
-        <ul class="nav nav-underline top-nav" id="groupsNav">
+        <ul class="nav nav-underline top-nav m-0 p-0" id="groupsNav">
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="toggleActiveTab(this, 'feed')">Feed</a>
+                <a class="nav-link d-grid justify-content-center" href="#" id="feed-tab" onclick="toggleActiveTab(this, 'feed')">
+                    <i class='bx bxs-hot ms-auto me-auto'></i>
+                    Feed
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="toggleActiveTab(this, 'myGroups')">My Groups</a>
+                <a class="nav-link d-grid justify-content-center" href="#" id="myGroups-tab" onclick="toggleActiveTab(this, 'myGroups')">
+                    <i class='bx bx-group ms-auto me-auto'></i>
+                    My Groups
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="toggleActiveTab(this, 'discover')">Discover</a>
+                <a class="nav-link d-grid justify-content-center" href="#" id="discover-tab" onclick="toggleActiveTab(this, 'discover')">
+                    <i class='bx bx-world ms-auto me-auto'></i>
+                    Discover
+                </a>
             </li>
         </ul>
     </div>
