--- a/Prototype/Views/Home/_Partials/Discover.cshtml
+++ b/Prototype/Views/Home/_Partials/Discover.cshtml
@@ -6,7 +6,7 @@
     Random rnd = new Random();
 }
 <head>
-    <link rel="stylesheet" href="css/discover.css" />
+    <link rel="stylesheet" href="~/css/myGroups.css" />
 </head>
 <section class="scroll-container" onscroll="scrollFunction('discoverContainer')" id="discoverContainer">
 
@@ -14,36 +14,38 @@
     <div id="toolbar">
 
         <!-- Search -->
-        <div class="input-group mb-3" id="discoverSearch">
+        <div class="input-group" id="discoverSearch">
             <span class="input-group-text"><i class='bx bx-search'></i></span>
             <input type="text" class="form-control" aria-label="Search Groups">
         </div>
     </div>
 
     <!-- Group Lists -->
-    <div class="container">
+    <div class="container groupList">
         @for (int i = 0; i < groupNumber; i++)
         {
-            <div class="card">
-                <div class="card-body d-inline-flex">
-                    <div class="img-container">
+            <div class="card group-card">
+                <div class="card-body">
+                    <a href="#" class="img-container">
                         <img src="imgs/myGroups/discover.png" alt="...">
-                    </div>
-                    <div class="d-inline">
-                        <h3>Group @i</h3>
-                        <div class="group-stats">
-                            <i class='bx bx-user-circle'></i>
-                            @rnd.Next(1, 50)
+                    </a>
+                    <div class="p-2">
+                        <a href="#">
+                            <div class="align-middle">
+                                <h3>Group @i</h3>
+                                <div class="group-stats">
+                                    <i class='bx bx-user-circle'></i>
+                                    @rnd.Next(1, 50)
 
-                            <i class='bx bx-lock-open-alt'></i>
-                            Public
-                        </div>
-                        This is a short summary of the group.
+                                    <i class='bx bx-lock-open-alt'></i>
+                                    Public
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         }
-
     </div>
 
 </section>
