--- a/Prototype/Views/Home/_Partials/MyGroups.cshtml
+++ b/Prototype/Views/Home/_Partials/MyGroups.cshtml
@@ -14,14 +14,14 @@
     <div id="toolbar">
 
         <!-- Search -->
-        <div class="input-group mb-3" id="groupSearch">
+        <div class="input-group" id="groupSearch">
             <span class="input-group-text"><i class='bx bx-search'></i></span>
             <input type="text" class="form-control" aria-label="Search Groups">
         </div>
 
         <!-- Example single danger button -->
         <div class="dropdown dropstart">
-            <button onclick="toggleDropdown('groupsFilters')" class="btn btn-cosgear">
+            <button onclick="toggleDropdown('groupsFilters')" class="btn btn-cosgear text-center">
                 <i class='bx bx-filter-alt'></i>
             </button>
             <div id="groupsFilters" class="dropdown-content" style="right: 5%;">
@@ -67,7 +67,7 @@
     </div>
 
     <!-- Group Lists -->
-    <div class="container">
+    <div class="container groupList">
         @for (int i = 0; i < groupNumber; i++)
         {
             <div class="card group-card">
@@ -75,7 +75,7 @@
                     <a href="@Url.Action("GroupView", "Home")" class="img-container">
                         <img src="imgs/myGroups/group1.jpeg" class="" alt="...">
                     </a>
-                    <div class="p-4">
+                    <div class="p-2">
                         <a href="@Url.Action("GroupView", "Home")">
                             <div class="align-middle">
                                 <h2>Group @i</h2>
@@ -106,7 +106,6 @@
                 </div>
             </div>
         }
-
     </div>
 
 </section>
