Adjusting cosplay card styling

--- a/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
@@ -75,20 +75,23 @@
                         <img src="../imgs/groupCosplays/fran.jpg" alt="...">
                     </div>
                     <div class="position-relative">
-                        <div class="position-sticky align-middle p-3">
-                            <h4 class="p-0">Character Name</h4>
+                        <!-- Cosplay Name and Progress -->
+                        <div class="align-middle position-sticky">
+                            <b>Character Name</b>
+                            <br />
                             <small> by @@Username-@i</small>
 
-                            <!-- Cosplay Progress Bar-->
+                            <!-- Cosplay Progress Bar -->
                             <div class="cosplay-stats">
                                 <p>@cosProg%</p>
                                 <div class="progress" role="progressbar" aria-label="Cosplay Progress" aria-valuenow="@cosProg" aria-valuemin="0" aria-valuemax="100">
                                     <div class="progress-bar" style="width: @cosProg%">
                                     </div>
                                 </div>
-                            </div>
+                            </div>                           
                         </div>
 
+                        <!-- Hype Counter -->
                         <div class="group-activity">
                             <div class="cosplay-hype">
                                 <i class='bx bxs-hot'></i>
