Style housekeeping and cleanup

--- a/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
@@ -7,7 +7,7 @@
 <head>
     <link rel="stylesheet" href="../css/groupFeed.css" />
 </head>
-<section class="text-center container scroll-container" onscroll="scrollFunction('postContainer')" id="postContainer">
+<section class="scroll-container" onscroll="scrollFunction('postContainer')" id="postContainer">
 
     <!-- Mid Level Tools -->
     <div id="toolbar">
