Minor styling tweaks, adding additional control to discover

--- a/Prototype/Views/Home/_Partials/Discover.cshtml
+++ b/Prototype/Views/Home/_Partials/Discover.cshtml
@@ -42,6 +42,11 @@
                                 </div>
                             </div>
                         </a>
+                        <div class="group-activity">
+                            <div class="notification">
+                                <i class='bx bx-info-circle'></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
